support ML307, new version 0.3.0

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(SOURCES "AudioDevice.cc"
+            "FirmwareUpgrade.cc"
+            "SystemInfo.cc"
             "SystemReset.cc"
             "Application.cc"
+            "Display.cc"
             "main.cc"
             )
 
