--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,8 +4,13 @@ set(SOURCES "AudioDevice.cc"
             "SystemReset.cc"
             "Application.cc"
             "Display.cc"
+            "Button.cc"
             "main.cc"
             )
+
+if(CONFIG_USE_AFE_SR)
+    list(APPEND SOURCES "AudioProcessor.cc" "WakeWordDetect.cc")
+endif()
 
 idf_component_register(SRCS ${SOURCES}
                     INCLUDE_DIRS "."
