--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,9 +1,10 @@
 ## IDF Component Manager Manifest File
 dependencies:
   78/esp-builtin-led: "^1.0.2"
-  78/esp-wifi-connect: "^1.1.0"
+  78/esp-wifi-connect: "^1.2.0"
   78/esp-opus-encoder: "^1.0.2"
   78/esp-ml307: "^1.2.1"
+  espressif/esp_codec_dev: "^1.3.1"
   espressif/esp-sr: "^1.9.0"
   espressif/button: "^3.3.1"
   lvgl/lvgl: "^8.4.0"
