--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,14 +1,14 @@
 ## IDF Component Manager Manifest File
 dependencies:
-  78/esp-wifi-connect: "^1.2.0"
-  78/esp-opus-encoder: "^1.0.2"
-  78/esp-ml307: "^1.2.2"
+  78/esp-wifi-connect: "~1.2.0"
+  78/esp-opus-encoder: "~1.0.2"
+  78/esp-ml307: "~1.3.0"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "^1.3.1"
   espressif/esp-sr: "^1.9.0"
   espressif/button: "^3.3.1"
-  lvgl/lvgl: "^8.4.0"
-  esp_lvgl_port: "^2.4.1"
+  lvgl/lvgl: "~8.4.0"
+  esp_lvgl_port: "~2.4.1"
   ## Required IDF version
   idf:
     version: ">=5.3"
