--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -38,6 +38,20 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_0)
     list(APPEND SOURCES ${BOARD_SOURCES} "Ml307Board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
     list(APPEND SOURCES "BoxAudioDevice.cc")
+elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
+    # add all files from boards/kevin-box-1
+    set(BOARD_TYPE "kevin-box-1")
+    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
+    list(APPEND SOURCES ${BOARD_SOURCES} "Ml307Board.cc")
+    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
+    list(APPEND SOURCES "BoxAudioDevice.cc")
+elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
+    # add all files from boards/lichuang-dev
+    set(BOARD_TYPE "lichuang-dev")
+    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
+    list(APPEND SOURCES ${BOARD_SOURCES} "WifiBoard.cc")
+    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
+    list(APPEND SOURCES "BoxAudioDevice.cc")
 endif()
 
 if(CONFIG_USE_AFE_SR)
