move wifi/ml307 to boards folder

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,40 +16,40 @@ if(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
     # add all files from boards/bread-compact-wifi
     set(BOARD_TYPE "bread-compact-wifi")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "wifi_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
     # add all files from boards/bread-compact-ml307
     set(BOARD_TYPE "bread-compact-ml307")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "ml307_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/ml307_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
     # add all files from boards/esp-box-3
     set(BOARD_TYPE "esp-box-3")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "wifi_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
     list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_0)
     # add all files from boards/kevin-box-0
     set(BOARD_TYPE "kevin-box-0")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "ml307_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
     list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     # add all files from boards/kevin-box-1
     set(BOARD_TYPE "kevin-box-1")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "ml307_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/ml307_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
     list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     # add all files from boards/lichuang-dev
     set(BOARD_TYPE "lichuang-dev")
     file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "wifi_board.cc")
+    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
     list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
     list(APPEND SOURCES "box_audio_device.cc")
 endif()
