--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,11 +1,17 @@
-set(SOURCES "audio_device.cc"
+set(SOURCES "audio_codec.cc"
+            "audio_codecs/no_audio_codec.cc"
+            "audio_codecs/box_audio_codec.cc"
+            "display.cc"
+            "display/ssd1306_display.cc"
+            "display/no_display.cc"
+            "board.cc"
+            "boards/ml307_board.cc"
+            "boards/wifi_board.cc"
             "system_info.cc"
             "system_reset.cc"
             "application.cc"
             "button.cc"
-            "builtin_led.cc"
-            "display.cc"
-            "board.cc"
+            "led.cc"
             "ota.cc"
             "main.cc"
             )
@@ -13,46 +19,20 @@ set(INCLUDE_DIRS ".")
 
 # 根据 BOARD_TYPE 配置添加对应的板级文件
 if(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
-    # add all files from boards/bread-compact-wifi
     set(BOARD_TYPE "bread-compact-wifi")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
-    # add all files from boards/bread-compact-ml307
     set(BOARD_TYPE "bread-compact-ml307")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/ml307_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
 elseif(CONFIG_BOARD_TYPE_ESP_BOX_3)
-    # add all files from boards/esp-box-3
     set(BOARD_TYPE "esp-box-3")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
-    list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_0)
-    # add all files from boards/kevin-box-0
     set(BOARD_TYPE "kevin-box-0")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
-    list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
-    # add all files from boards/kevin-box-1
     set(BOARD_TYPE "kevin-box-1")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/ml307_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
-    list(APPEND SOURCES "box_audio_device.cc")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
-    # add all files from boards/lichuang-dev
     set(BOARD_TYPE "lichuang-dev")
-    file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
-    list(APPEND SOURCES ${BOARD_SOURCES} "boards/wifi_board.cc")
-    list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE})
-    list(APPEND SOURCES "box_audio_device.cc")
 endif()
+file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
+list(APPEND SOURCES ${BOARD_SOURCES})
 
 if(CONFIG_USE_AFE_SR)
     list(APPEND SOURCES "audio_processor.cc" "wake_word_detect.cc")
