--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,11 +2,12 @@ set(SOURCES "audio_codec.cc"
             "audio_codecs/no_audio_codec.cc"
             "audio_codecs/box_audio_codec.cc"
             "display.cc"
-            "display/ssd1306_display.cc"
             "display/no_display.cc"
+            "display/st7789_display.cc"
+            "display/ssd1306_display.cc"
             "board.cc"
-            "boards/ml307_board.cc"
             "boards/wifi_board.cc"
+            "boards/ml307_board.cc"
             "system_info.cc"
             "system_reset.cc"
             "application.cc"
