add two board&fix swap xy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,10 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
 
-set(PROJECT_VER "0.7.1")
+set(PROJECT_VER "0.7.2")
+
+add_compile_options(-Wno-error=format= -Wno-format)
+
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(xiaozhi)
