--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -9,6 +9,7 @@ dependencies:
   espressif/button: "^3.3.1"
   lvgl/lvgl: "~8.4.0"
   esp_lvgl_port: "~2.4.1"
+  espressif/esp_lcd_touch_cst816s: "^1.0.0"
   ## Required IDF version
   idf:
     version: ">=5.3"
