增加第三版硬件

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -31,6 +31,8 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_0)
     set(BOARD_TYPE "kevin-box-0")
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
     set(BOARD_TYPE "kevin-box-1")
+elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
+    set(BOARD_TYPE "kevin-box-2")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
 elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V3_DEV)
