add websocket protocol

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES "audio_codec.cc"
             "board.cc"
             "protocol.cc"
             "protocols/mqtt_protocol.cc"
+            "protocols/websocket_protocol.cc"
             "system_info.cc"
             "application.cc"
             "button.cc"
