--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,9 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "audio_codecs/box_audio_codec.cc"
             "audio_codecs/es8311_audio_codec.cc"
             "audio_codecs/cores3_audio_codec.cc"
+            "led_strip/single_led.cc"
+            "led_strip/multiple_led.cc"
+            "led_strip/led_strip_wrapper.cc"
             "display/display.cc"
             "display/no_display.cc"
             "display/st7789_display.cc"
