add board magiclick v2.4

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -52,6 +52,8 @@ elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
 elseif(CONFIG_BOARD_TYPE_TERRENCE_C3_DEV)
     set(BOARD_TYPE "terrence-c3-dev")
+elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
+    set(BOARD_TYPE "magiclick-2p4")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
