use espressif component

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,6 +1,7 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/esp_lcd_ili9341: "==1.2.0"
+  78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~1.4.1"
   78/esp-opus-encoder: "~2.0.0"
   78/esp-ml307: "~1.7.0"
@@ -10,8 +11,6 @@ dependencies:
   espressif/button: "^3.3.1"
   lvgl/lvgl: "~8.4.0"
   esp_lvgl_port: "~2.4.1"
-  MakerM0/esp_lcd_nv3023:  
-    git: https://github.com/MakerM0/esp_lcd_nv3023.git
   ## Required IDF version
   idf:
     version: ">=5.3"
