--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "led/circular_strip.cc"
             "display/display.cc"
             "display/no_display.cc"
-            "display/st7789_display.cc"
+            "display/lcd_display.cc"
             "display/ssd1306_display.cc"
             "protocols/protocol.cc"
             "protocols/mqtt_protocol.cc"
