rename to xmini c3

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -57,8 +57,8 @@ elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
     set(BOARD_TYPE "magiclick-2p4")
 elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_S3)
     set(BOARD_TYPE "m5stack-core-s3")
-elseif(CONFIG_BOARD_TYPE_TERRENCE_C3)
-    set(BOARD_TYPE "terrence-c3")
+elseif(CONFIG_BOARD_TYPE_XMINI_C3)
+    set(BOARD_TYPE "xmini-c3")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
