--- a/images/config.toml
+++ b/images/config.toml
@@ -1,6 +1,6 @@
 esp_toml_version = 1.0
 firmware_images_url = "https://github.com/whble/xiaozhi-esp32/blob/main/images/"
-config_readme_url = "https://github.com/whble/xiaozhi-esp32/blob/main/images/cfg.md"
+config_readme_url = "https://raw.githubusercontent.com/whble/xiaozhi-esp32/refs/heads/main/images/config.toml"
 
 supported_apps = ["xiaozhi_esp-box-3_v0.9.8"]
 
