--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -59,6 +59,8 @@ elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_S3)
     set(BOARD_TYPE "m5stack-core-s3")
 elseif(CONFIG_BOARD_TYPE_XMINI_C3)
     set(BOARD_TYPE "xmini-c3")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_KORVO2_V3)
+    set(BOARD_TYPE "esp32s3-korvo2-v3")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
