--- a/images/config.toml
+++ b/images/config.toml
@@ -1,5 +1,5 @@
 esp_toml_version = 1.0
-firmware_images_url = "https://raw.githubusercontent.com/whble/xiaozhi-esp32/refs/heads/main/images/"
+firmware_images_url = "https://github.com/whble/xiaozhi-esp32/releases/download/v0.9.8/"
 config_readme_url = "https://raw.githubusercontent.com/whble/xiaozhi-esp32/refs/heads/main/images/cfg.md"
 
 supported_apps = ["bread-compact-ml307_v0_9_8","bread-compact-wifi_v0_9_8",
