--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -53,6 +53,8 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_C3)
     set(BOARD_TYPE "kevin-c3")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
+    elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
+    set(BOARD_TYPE "lichuang-c3-dev")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
     set(BOARD_TYPE "magiclick-2p4")
 elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_S3)
