--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,6 +1,7 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/esp_lcd_ili9341: "==1.2.0"
+  espressif/esp_lcd_gc9a01: "^2.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~2.0.1"
   78/esp-opus-encoder: "~2.0.0"
