Added ESP32-S3-Touch-AMOLED-1.8 support

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,6 +1,9 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/esp_lcd_ili9341: "==1.2.0"
+  waveshare/esp_lcd_sh8601:
+    version: "1.0.1"
+    public: true
   78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~2.0.1"
   78/esp-opus-encoder: "~2.0.0"
