--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,5 +1,8 @@
 ## IDF Component Manager Manifest File
 dependencies:
+  waveshare/esp_lcd_sh8601:
+    version: "1.0.1"
+    public: true
   espressif/esp_lcd_ili9341: "==1.2.0"
   espressif/esp_lcd_gc9a01: "^2.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
