在LCD屏幕增加彩色表情显示

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -32,7 +32,10 @@ list(APPEND SOURCES ${IOT_SOURCES})
 file(GLOB FONT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/fonts/*.c)
 list(APPEND SOURCES ${FONT_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/fonts)
-
+#表情字体
+file(GLOB EMOJI_FONT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/fonts/emoji/*.c)
+list(APPEND SOURCES ${EMOJI_FONT_SOURCES})
+list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/fonts/emoji)
 # 添加板级公共文件
 file(GLOB BOARD_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/common/*.cc)
 list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
