--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,15 +1,18 @@
 ## IDF Component Manager Manifest File
 dependencies:
-  78/esp-wifi-connect: "~1.4.1"
-  78/esp-opus-encoder: "~2.0.0"
-  78/esp-ml307: "~1.7.0"
-  espressif/led_strip: "^2.4.1"
-  espressif/esp_codec_dev: "~1.3.2"
-  espressif/esp-sr: "^1.9.0"
-  espressif/button: "^3.3.1"
-  lvgl/lvgl: "~8.4.0"
-  esp_lvgl_port: "~2.4.1"
+  78/esp-wifi-connect: ~1.4.1
+  78/esp-opus-encoder: ~2.0.0
+  78/esp-ml307: ~1.7.0
+  espressif/led_strip: ^2.4.1
+  espressif/esp_codec_dev: ~1.3.2
+  espressif/esp-sr: ^1.9.0
+  espressif/button: ^3.3.1
+  lvgl/lvgl: ~8.4.0
+  esp_lvgl_port: ~2.4.1
   ## Required IDF version
   idf:
-    version: ">=5.3"
+    version: '>=5.3'
 
+  espressif/bme280: =*
+  i2c_bus:
+    public: true
