--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,8 @@ cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_VER "0.9.9")
 
+# Add this line to disable the specific warning
+add_compile_options(-Wno-missing-field-initializers)
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(xiaozhi)
