Resolve display io and PA io conflicts on Esp Sparkbot board

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -66,7 +66,7 @@ elseif(CONFIG_BOARD_TYPE_XMINI_C3)
 elseif(CONFIG_BOARD_TYPE_ESP32S3_KORVO2_V3)
     set(BOARD_TYPE "esp32s3-korvo2-v3")
 elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
-    set(BOARD_TYPE "esp_SparkBot")    
+    set(BOARD_TYPE "esp-SparkBot")    
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 endif()
