--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -67,6 +67,10 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_KORVO2_V3)
     set(BOARD_TYPE "esp32s3-korvo2-v3")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
+elseif(CONFIG_BOARD_TYPE_ESP_BOX_3_NEW)
+    set(BOARD_TYPE "esp-box-3-new")
+elseif(CONFIG_BOARD_TYPE_YANGHE_BOX)
+    set(BOARD_TYPE "yanghe-box")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
