--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -79,7 +79,7 @@ file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
 
 if(CONFIG_IDF_TARGET_ESP32S3)
-    list(APPEND SOURCES "audio_processing/audio_processor.cc" "audio_processing/wake_word_detect.cc")
+    list(APPEND SOURCES "audio_processing/audio_processor.cc" "audio_processing/wake_word_detect.cc" "audio_processing/fft_dsp_processor.cc")
 endif()
 
 idf_component_register(SRCS ${SOURCES}
