--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -13,6 +13,8 @@ dependencies:
   78/xiaozhi-fonts: "~1.3.2"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
+  espressif/esp_audio_codec: "~2.2"
+  espressif/esp_audio_effects: "~1.0"
   espressif/esp-sr: "^1.9.0"
   espressif/button: "^3.3.1"
   lvgl/lvgl: "~9.2.2"
