--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -71,7 +71,9 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_LCD)
     set(BOARD_TYPE "bread-compact-wifi-lcd")    
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_CIRCLE_S3)
-    set(BOARD_TYPE "lilygo-t-circle-s3")    
+    set(BOARD_TYPE "lilygo-t-circle-s3") 
+elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
+    set(BOARD_TYPE "movecall-moji-esp32s3")   
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
