--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -10,13 +10,13 @@ dependencies:
   78/esp-opus-encoder: "~2.1.0"
   78/esp-ml307: "~1.7.1"
   78/xiaozhi-fonts: "~1.2.0"
+  78/emoji_font: "~1.1.0"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
   espressif/esp-sr: "^1.9.0"
   espressif/button: "^3.3.1"
   lvgl/lvgl: "~8.4.0"
   esp_lvgl_port: "~2.4.1"
-  zhoukes/emoji_font: "~1.0.0"
   ## Required IDF version
   idf:
     version: ">=5.3"
