--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -85,6 +85,8 @@ elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3)
     set(BOARD_TYPE "atk-dnesp32s3")
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX)
     set(BOARD_TYPE "atk-dnesp32s3-box") 
+elseif(CONFIG_BOARD_TYPE_DU_CHATX)
+    set(BOARD_TYPE "du-chatx")     
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
