feat: support JC3636W518 of taiji-pi-s3 board.

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -5,6 +5,7 @@ dependencies:
     public: true
   espressif/esp_lcd_ili9341: "==1.2.0"
   espressif/esp_lcd_gc9a01: "^2.0.1"
+  espressif/esp_lcd_st77916: "^1.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~2.1.0"
   78/esp-opus-encoder: "~2.1.0"
