--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -89,7 +89,7 @@ elseif(CONFIG_BOARD_TYPE_DU_CHATX)
     set(BOARD_TYPE "du-chatx")     
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BOARD_TYPE "taiji-pi-s3")
-elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0.96)
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_OLED)
     set(BOARD_TYPE "xingzhi-cube-0.96")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
