--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -90,7 +90,7 @@ elseif(CONFIG_BOARD_TYPE_DU_CHATX)
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BOARD_TYPE "taiji-pi-s3")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_OLED)
-    set(BOARD_TYPE "xingzhi-cube-0.96")
+    set(BOARD_TYPE "xingzhi-cube-oled")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
