等待测试vfd显示

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -91,6 +91,8 @@ elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX)
     set(BOARD_TYPE "atk-dnesp32s3-box") 
 elseif(CONFIG_BOARD_TYPE_DU_CHATX)
     set(BOARD_TYPE "du-chatx")     
+elseif(CONFIG_BOARD_TYPE_DUAL_SCREEN_AI_DISPLAY)
+    set(BOARD_TYPE "dual-screen-ai-display")     
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
