--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -91,6 +91,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BOARD_TYPE "taiji-pi-s3")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_OLED)
     set(BOARD_TYPE "xingzhi-cube-oled")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_TFT)
+    set(BOARD_TYPE "xingzhi-cube-tft")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
