--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -75,6 +75,12 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
     set(BOARD_TYPE "esp-sparkbot")    
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.85c")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85)
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.85")
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_46)
+    set(BOARD_TYPE "esp32-s3-touch-lcd-1.46")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_LCD)
     set(BOARD_TYPE "bread-compact-wifi-lcd")    
 elseif(CONFIG_BOARD_TYPE_TUDOUZI)
