--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -50,7 +50,9 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_1)
 elseif(CONFIG_BOARD_TYPE_KEVIN_BOX_2)
     set(BOARD_TYPE "kevin-box-2")
 elseif(CONFIG_BOARD_TYPE_KEVIN_C3)
-    set(BOARD_TYPE "kevin-c3")
+    set(BOARD_TYPE "kevin-c3") 
+elseif(CONFIG_BOARD_TYPE_KEVIN_SP_V3_DEV)
+    set(BOARD_TYPE "kevin-sp-v3-dev")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV)
     set(BOARD_TYPE "lichuang-dev")
 elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
