--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -17,6 +17,7 @@ dependencies:
   espressif/button: "^3.3.1"
   lvgl/lvgl: "~9.2.2"
   esp_lvgl_port: "~2.4.4"
+  espressif/esp_lcd_panel_io_additions: "^1.0.1"
   ## Required IDF version
   idf:
     version: ">=5.3"
