--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -6,6 +6,7 @@ dependencies:
   espressif/esp_lcd_st77916: "^1.0.1"
   espressif/esp_lcd_spd2010: "==1.0.2"
   espressif/esp_io_expander_tca9554: "==2.0.0"
+  espressif/esp_lcd_panel_io_additions: "^1.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
   78/esp-wifi-connect: "~2.3.0"
   78/esp-opus-encoder: "~2.1.0"
