适配DVO触摸芯片的操作

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -3,6 +3,9 @@ dependencies:
   waveshare/esp_lcd_sh8601:
     version: "1.0.2"
     public: true
+  esp_lcd_touch_ft5x06:
+    version: "*"
+    public: true
   espressif/esp_lcd_ili9341: "==1.2.0"
   espressif/esp_lcd_gc9a01: "^2.0.1"
   78/esp_lcd_nv3023: "~1.0.0"
