--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -61,6 +61,8 @@ elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P5)
     set(BOARD_TYPE "magiclick-2p5")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_C3)
     set(BOARD_TYPE "magiclick-c3")
+elseif(CONFIG_BOARD_TYPE_MAGICLICK_C3_V2)
+    set(BOARD_TYPE "magiclick-c3-v2")
 elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_S3)
     set(BOARD_TYPE "m5stack-core-s3")
 elseif(CONFIG_BOARD_TYPE_ATOMS3_ECHO_BASE)
