--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -97,10 +97,14 @@ elseif(CONFIG_BOARD_TYPE_DU_CHATX)
     set(BOARD_TYPE "du-chatx")     
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BOARD_TYPE "taiji-pi-s3")
-elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_OLED)
-    set(BOARD_TYPE "xingzhi-cube-oled")
-elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_TFT)
-    set(BOARD_TYPE "xingzhi-cube-tft")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_96OLED_WIFI)
+    set(BOARD_TYPE "xingzhi-cube-0.96oled-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_96OLED_ML307)
+    set(BOARD_TYPE "xingzhi-cube-0.96oled-ml307")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
+    set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
+    set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
