--- a/main/boards/esp32-cgc/config.json
+++ b/main/boards/esp32-cgc/config.json
@@ -6,5 +6,6 @@
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_4MB=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions_4M.csv\"",
+                "CONFIG_LCD_ST7735_128X128=y"
             ]
         }
