add 神奇按钮2.5和c3-v2 (#206)
* add 神奇按钮2.5

* add 神奇按钮 c3-v2

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -57,8 +57,12 @@ elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
     set(BOARD_TYPE "lichuang-c3-dev")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
     set(BOARD_TYPE "magiclick-2p4")
+elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P5)
+    set(BOARD_TYPE "magiclick-2p5")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_C3)
     set(BOARD_TYPE "magiclick-c3")
+elseif(CONFIG_BOARD_TYPE_MAGICLICK_C3_V2)
+    set(BOARD_TYPE "magiclick-c3-v2")
 elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_S3)
     set(BOARD_TYPE "m5stack-core-s3")
 elseif(CONFIG_BOARD_TYPE_ATOMS3_ECHO_BASE)
