Add osptek r1.2 development board

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -101,6 +101,8 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_OLED)
     set(BOARD_TYPE "xingzhi-cube-oled")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_TFT)
     set(BOARD_TYPE "xingzhi-cube-tft")
+elseif(CONFIG_BOARD_TYPE_OSPTEK_R_1_2)
+    set(BOARD_TYPE "osptek-r1.2")
 endif()
 file(GLOB BOARD_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc)
 list(APPEND SOURCES ${BOARD_SOURCES})
