增加极客巢V5M收音机设备支持
极客巢V5M收音机是DIY组装收音机套件，采用ESP32/4M flash/4M PSRAM，声音部分采用NAU88C22芯片。

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -110,6 +110,8 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
+elseif(CONFIG_BOARD_TYPE_ESP32_GN_RADIO_V5M)
+    set(BOARD_TYPE "gn-radio-v5m") 
 endif()
 file(GLOB BOARD_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
